--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,15 +31,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
-        
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload the content from the 'home' directory
-          path: 'Home'
+          # Upload the entire repository, not just the 'home' folder
+          path: './'
           
       - name: Deploy to GitHub Pages
         id: deployment
