--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload the entire repository, not just the 'home' folder
-          path: './'
+          path: 'Home'
           
       - name: Deploy to GitHub Pages
         id: deployment
